<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/drawer_group_content">
        <menu>
            <item
                android:id="@+id/drawer_zhihu"
                android:checkable="true"
                android:checked="true"
                android:icon="@mipmap/ic_drawer_zhihu"
                android:title="@string/zhihu" />
            <item
                android:id="@+id/drawer_netease_video"
                android:checkable="true"
                android:icon="@mipmap/ic_drawer_netease"
                android:title="@string/netease" />
        </menu>
    </item>
    <item android:title="@string/drawer_group_options">
        <menu>
            <item
                android:id="@+id/drawer_about"
                android:checkable="true"
                android:icon="@mipmap/ic_drawer_about"
                android:title="@string/drawer_about" />
        </menu>
    </item>
</menu>